--- a/emcweb.apache2.conf
+++ b/emcweb.apache2.conf
@@ -1,3 +1,13 @@
+<IfModule mod_rewrite.c>
+	<VirtualHost *:80>
+		ErrorLog ${APACHE_LOG_DIR}/error.log
+		CustomLog ${APACHE_LOG_DIR}/access.log combined
+		RewriteEngine On
+		RewriteCond %{SERVER_PORT} !^443$
+		RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R,L]
+	</VirtualHost>
+</IfModule>
+
 <IfModule mod_ssl.c>
 	<VirtualHost _default_:443>
 		ServerAdmin webmaster@localhost
