New auth method by login/password

--- a/emcweb.apache2.conf
+++ b/emcweb.apache2.conf
@@ -21,7 +21,7 @@
 			Order deny,allow
 			Allow from all
 			SSLOptions +StdEnvVars +ExportCertData
-			SSLVerifyClient require
+			SSLVerifyClient optional
 			SSLVerifyDepth 1
 			Require all granted
 		</Directory>
