Update Apache config

--- a/emcweb.apache2.conf
+++ b/emcweb.apache2.conf
@@ -35,8 +35,8 @@
 			SSLVerifyClient none
 		</LocationMatch>
 		SSLEngine on
-		SSLCertificateFile /etc/ssl/certs/ssl-cert-snakeoil.pem
-		SSLCertificateKeyFile /etc/ssl/private/ssl-cert-snakeoil.key
+		SSLCertificateFile /etc/ssl/certs/emcweb.crt
+		SSLCertificateKeyFile /etc/ssl/private/emcweb.key
 		SSLCACertificateFile /etc/ssl/certs/emcssl_ca.crt
 		<FilesMatch "\.(cgi|shtml|phtml|php)$">
 			SSLOptions +StdEnvVars
