Apache2 cfg tiny fix

--- a/emcweb.apache2.conf
+++ b/emcweb.apache2.conf
@@ -35,9 +35,9 @@
 			SSLVerifyClient none
 		</LocationMatch>
 		SSLEngine on
-		SSLCertificateFile /etc/ssl/certs/emcweb.crt
-		SSLCertificateKeyFile /etc/ssl/private/emcweb.key
-		SSLCACertificateFile /etc/ssl/certs/emcssl_ca.crt
+        SSLCertificateFile /var/lib/emc/ssl/emercoin.crt
+        SSLCertificateKeyFile /var/lib/emc/ssl/emercoin.key
+		SSLCACertificateFile /var/lib/emc/ssl/emcssl_ca.crt
 		<FilesMatch "\.(cgi|shtml|phtml|php)$">
 			SSLOptions +StdEnvVars
 		</FilesMatch>
