--- a/emcweb.apache2.conf
+++ b/emcweb.apache2.conf
@@ -32,9 +32,9 @@
 			SSLVerifyClient none
 		</LocationMatch>
 		SSLEngine on
-        SSLCertificateFile /var/lib/emc/ssl/emercoin.crt
-        SSLCertificateKeyFile /var/lib/emc/ssl/emercoin.key
-		SSLCACertificateFile /var/lib/emc/ssl/emcssl_ca.crt
+		SSLCertificateFile /etc/ssl/emc/emcweb.crt
+		SSLCertificateKeyFile /etc/ssl/emc/emcweb.key
+		SSLCACertificateFile /etc/ssl/emc/emcssl_ca.crt
 		<FilesMatch "\.(cgi|shtml|phtml|php)$">
 			SSLOptions +StdEnvVars
 		</FilesMatch>
